Stripe-Custom-QtC-Demo/force-app/main/default/objects/Individual/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <label>email</label>
    <type>Email</type>
</CustomField>