Stripe-Custom-QtC-Demo/force-app/main/default/objects/Individual/fields/Identity_Status__c.field-meta.xml
<CustomField>
    <fullName>Identity_Status__c</fullName>
    <label>Identity Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>