Stripe-Custom-QtC-Demo/force-app/main/default/objects/Individual/fields/Identity_Verified__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identity Verified</label>
    <type>Checkbox</type>
</CustomField>